feat: complete TODO2 and TODO6-7 runtime refactors
Unify middleware, model factory, tool assembly, sandbox isolation, and skill tool enforcement. Add atomic runtime configuration reload, path validation, memory cleanup, durable context protection, and the corresponding tests.